--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.0.13
   intl: ^0.17.0
   udp: ^5.0.3
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
