--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: keyboard
-description: A new Flutter project.
+description: Funni bongocat writes.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -61,11 +61,17 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family: "CatCafe"
+      fonts:
+      - asset: "fonts/CatCafe.ttf"
   assets:
     - assets/
     - assets/bongo_cat_down.png
     - assets/bongo_cat.png
     - assets/bongo_cat2_right.png
+    - assets/default_light/
+    - assets/megumin/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
