--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Download a Build Artifact
         uses: actions/download-artifact@v3.0.0
 
-  build_appbundle:
+  build_apk:
     name: Build Flutter (APK)
     needs: [flutter_test]
     runs-on: ubuntu-latest
@@ -63,5 +63,49 @@ jobs:
         with:
           name: apk-build
           path: build/app/outputs/apk/release
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v3.0.0
+  build_windows:
+    name: Build Flutter (Windows)
+    needs: [flutter_test]
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter clean
+      - run: flutter build windows --release
+      - name: Upload Windows build
+        uses: actions/upload-artifact@master
+        with:
+          name: apk-build
+          path: build/app/outputs
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v3.0.0
+  build_linux:
+    name: Build Flutter (Linux)
+    needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter clean
+      - run: flutter build linux --release
+      - name: Upload Linux build
+        uses: actions/upload-artifact@master
+        with:
+          name: apk-build
+          path: build/app/outputs
       - name: Download a Build Artifact
         uses: actions/download-artifact@v3.0.0
