--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: apk-build
-          path: build/app/outputs
+          path: build/
       - name: Download a Build Artifact
         uses: actions/download-artifact@v3.0.0
   build_linux:
@@ -99,6 +99,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
+      - run: sudo apt install -y clang ninja-build libgtk-3-dev
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build linux --release
@@ -106,6 +107,6 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: apk-build
-          path: build/app/outputs
+          path: build/
       - name: Download a Build Artifact
         uses: actions/download-artifact@v3.0.0
