--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,22 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: true
+  ios: true
+  linux: true
+  windows:
+    generate: true
+    image_path: "assets/icons/icon.png"
+    icon_size: 48
+  macos: true
+  image_path: "assets/icons/icon.png"
+  adaptive_icon_foreground: "assets/icons/1024.png"
+  adaptive_icon_background: "#ffffff"
+
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -73,6 +89,7 @@ flutter:
     - assets/default_light/
     - assets/default_dark/
     - assets/megumin/
+    - assets/icons/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
