--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
+          architecture: x64
       - run: flutter pub get
 
 
@@ -28,9 +29,10 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: "12.x"
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
+          architecture: x64
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build ios --release --no-codesign
