--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+msix_config:
+  display_name: KeyboardDeck
+  publisher_display_name: Francesco Caracciolo
+  identity_name: space.keyboarddeck.app
+  msix_version: 1.0.0.0
+  logo_path: C:\path\to\logo.png
+  capabilities: internetClient
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -44,6 +50,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.10.0
+  msix: ^3.6.3
+
 
 flutter_icons:
   android: true
